--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
 }
 #content {
     border: 1px solid #ddd;
-    height: 550px;
+    height: 510px;
     margin: 80px auto 15px;
     padding-bottom: 70px;
     width: 70%;
@@ -59,7 +59,7 @@ body {
 #main_img img {
     display: block;
     margin: 3% auto;
-    max-height: 550px;
+    max-height: 510px;
     max-width: 650px;
     min-height: 450px;
     position: static;
@@ -358,7 +358,7 @@ body {
 #about_author p {
     float: left;
     font-family: Comic Sans MS;
-    margin-left: 15px;
+    margin-left: 20px;
     margin-top: -6px;
     text-align: justify;
     width: 338px;
@@ -366,7 +366,7 @@ body {
 #about_author img {
     float: right;
     margin-bottom: 20px;
-    margin-right: 30px;
+    margin-right: 20px;
     width: 500px;
 }
 #about_author button {
@@ -406,7 +406,8 @@ body {
 .author_page_links li {
     float: left;
     list-style: outside none none;
-    padding: 10px;
+    margin: 5px;
+    padding: 5px;
 	border-right: 1px solid #ddd;
 }
 .author_page_links li:last-of-type{
